# agentops

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  README.md  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 80bae05cc5d4_add_settings_preferences_table.py  d9efa18dd9b2_create_initial_tables.py
backend/app/: main.py
backend/app/config/: settings.py
backend/app/controllers/: __init__.py  dashboard_controller.py  evaluation_controller.py  health_controller.py  settings_controller.py  span_controller.py  trace_controller.py
backend/app/database/: __init__.py  dependencies.py  session.py
backend/app/models/: __init__.py  agent.py  evaluation.py  settings_preference.py  span.py  tool_call.py  trace.py
backend/app/repositories/: __init__.py  agent_repository.py  (+6 more)
backend/sdk/: README.md  demo.py  pyproject.toml
backend/sdk/agentops/: __init__.py  errors.py
backend/sdk/agentops/client/: __init__.py  client.py
backend/sdk/agentops/integrations/: __init__.py  langchain.py
backend/sdk/agentops/models/: __init__.py  payloads.py
backend/sdk/agentops/trackers/: __init__.py  span_tracker.py  trace_tracker.py
backend/sdk/agentops/utils/: __init__.py  time.py
backend/sdk/examples/: langchain_callback_example.py
backend/tests/: conftest.py  test_dashboard_summary_api.py  test_demo_seed_service.py  test_ingestion_api.py
docs/: release.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css
(+79 files in other folders)
