[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-sdk"
version = "0.1.0"
description = "Lightweight Python SDK for AgentOps telemetry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentops*"]
